Se arreglo los proyectos y casos de uso, ademas de implementacion de compilacion de codigo interna java